NNTP: Fix issue where the first-run message is truncated.
BUG=chromium-os:11140
TEST=Start chrome with a new profile with Japanese or Greek UI,
     or >Settings>Under the Hood>Font size>Very Large in English UI.
     The message is displayed in multiple lines instead of ellipses.

Review URL: http://codereview.chromium.org/6812010
Patch from Kazuhiro Inaba <kinaba@chromium.org>.

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@81064 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: bc78d4db680894f3bf2eaa0d6ee713e9aec5eebb

--- a/chrome/browser/resources/new_new_tab.css
+++ b/chrome/browser/resources/new_new_tab.css
@@ -147,6 +147,10 @@ html[anim=false] *,
   text-overflow: ellipsis;
 }
 
+#notification.first-run > * {
+  white-space: normal;
+}
+
 #notification.show {
   opacity: 1;
   pointer-events: all;
